Cleaned up page by moving links on about me down and fixing spacing

--- a/src/about-me/about-me.css
+++ b/src/about-me/about-me.css
@@ -1,3 +1,3 @@
 .page-margins {
-    margin: 0 150px;
+    margin: 70px 150px 0 150px;
 }
